force-app/main/default/objects/ContractManufacturerAllocation__c/ContractManufacturerAllocation__c.object-meta.xml
<CustomObject>
    <description>SOX object - It&apos;s a demand matrix which captures product allocated per distibutor per Contract Manufacturer</description>
    <label>Contract Manufacturer Allocation</label>
    <nameField>
        <displayFormat>CMA-{00000}</displayFormat>
        <label>CM Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Manufacturer Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>