force-app/main/default/objects/ContractManufacturerAllocation__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>to specify, some detail around allocation record, like why it was Closed, or other</description>
    <inlineHelpText>to specify, some detail around allocation record, like why it was Closed, or other</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>