force-app/main/default/objects/ContractManufacturerAllocation__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Distributor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Distributor Partner Not Available for given Name</errorMessage>
        <filterItems>
            <field>Account.Contract_Status__c</field>
            <operation>notEqual</operation>
            <value>Expired, Merged w/ another acct, Terminated</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Manufacturer Allocations</relationshipLabel>
    <relationshipName>ContractManufacturerAllocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>