force-app/main/default/objects/ContractManufacturerAllocation__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Used to Show Date from when changes in Aspen Distributor or CM were Introduced, mid-quarter.</description>
    <inlineHelpText>Used to Show Date from when changes in Aspen Distributor or CM were Introduced, mid-quarter.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>