force-app/main/default/objects/ContractManufacturerAllocation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contract Manufacturer Allocations</relationshipLabel>
    <relationshipName>ContractManufacturerAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>