force-app/main/default/objects/ContractManufacturerAllocation__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>