force-app/main/default/objects/ContractManufacturerAllocation__c/fields/TotalFulfillment__c.field-meta.xml
<CustomField>
    <fullName>TotalFulfillment__c</fullName>
    <label>Total Fulfillment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>