force-app/main/default/objects/ContractManufacturerAllocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ContractManufacturer__c</columns>
    <columns>Product__c</columns>
    <columns>Distributor__c</columns>
    <columns>TotalFulfillment__c</columns>
    <columns>EndDate__c</columns>
    <columns>Quarter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quarter__c</field>
        <operation>equals</operation>
        <value>FY2023Q3</value>
    </filters>
    <label>All</label>
</ListView>